--- a/src/pages/About_us/About.css
+++ b/src/pages/About_us/About.css
@@ -54,7 +54,7 @@
     color: #0f172a;
     margin: 40px 0 20px;
     padding-left: 15px;
-    border-left: 4px solid #3b82f6;
+    /* border-left: 4px solid #3b82f6; */
     font-weight: 600;
     transition: color 0.3s ease;
 }
